fix: 댓글 태그 작성 막기, game별 문의사항 작성 오류 수정

--- a/src/main/webapp/css/game_detail.css
+++ b/src/main/webapp/css/game_detail.css
@@ -52,3 +52,10 @@
 	display: flex;
 	flex-direction: column;
 }
+#commentContent {
+	
+}
+#createComment {
+	min-width: 102px;
+	padding: inherit;
+}
