fix: 댓글 역순으로 작성 기능 구현

--- a/src/main/webapp/css/game_detail.css
+++ b/src/main/webapp/css/game_detail.css
@@ -50,11 +50,9 @@
 	max-height: 300px;
 	overflow-y: scroll;
 	display: flex;
-	flex-direction: column;
+	flex-direction: column-reverse;
 }
-#commentContent {
-	
-}
+
 #createComment {
 	min-width: 102px;
 	padding: inherit;
